--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">
     <link rel="manifest" href="_manifest.json" data-pwa-version="set_in_manifest_and_pwa_js">
     <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
@@ -28,7 +31,7 @@
 
     <div id="page">
 
-        <div class="header header-fixed header-logo-center">
+        <div class="header header-fixed header-logo-center bg-white">
             <a href="index.html" class="header-title">Tap Savvy</a>
 
             <a href="#" data-toggle-theme class="header-icon header-icon-4 show-on-theme-dark"><i
@@ -38,45 +41,21 @@
         </div>
 
         <div id="footer-bar" class="footer-bar-6 ">
-            <a href="#" data-menu="menu-email" style="width: 60px;"><i class="fa-solid fa-envelope"></i><span>Email
+            <a href="#" data-menu="menu-email" style="width: 60px;"><i class="fa-solid fa-envelope"></i><span>QR Code
                 </span></a>
             <a href="#" data-menu="menu-links" style="width: 60px;"><i class="fa-solid fa-link"></i><span>Links
                 </span></a>
-            <a href="#" class="circle-nav active-nav" style="width: 60px;"><i class="fa fa-home"></i><span>
-                    Welcome</span></a>
+            <a href="#" class="circle-nav active-nav" style="width: 60px;"><i class="fa fa-user"></i><span>
+                    Save Contact</span></a>
             <a href="#" data-menu="menu-social" style="width: 60px;"><i
                     class="fa-solid fa-user-group"></i><span>Social</span></a>
             <a href="#" data-menu="menu-contact" style="width: 60px;"><i
-                    class="fa-brands fa-whatsapp"></i><span>Contact</span></a>
+                    class="fa fa-phone"></i><span>Contact</span></a>
         </div>
 
-        <div class="card card-fixed bg-10" data-card-height="450">
-            <div class="splide single-slider slider-has-arrows slider-no-dots" id="single-slider-2">
-                <div class=" splide__track">
-                    <div class="splide__list">
-                        <div class="splide__slide">
-                            <div data-card-height="450" class="card mb-0 bg-6 shadow-l">
-
-                                <div class="card-overlay bg-gradient"></div>
-                            </div>
-                        </div>
-                        <div class="splide__slide">
-                            <div data-card-height="450" class="card mb-0 bg-27 shadow-l">
-
-                                <div class="card-overlay bg-gradient"></div>
-                            </div>
-                        </div>
-                        <div class="splide__slide">
-                            <div data-card-height="450" class="card mb-0 bg-29 shadow-l">
-
-                                <div class="card-overlay bg-gradient"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card card-fixed bg-10" data-card-height="450"> <img src="./images/cards/Abouts us bg.jpg" alt="">
         </div>
-        <div class="card card-clear" data-card-height="450"> </div>
+        <div class="card card-clear" data-card-height="300"></div>
 
 
 
@@ -86,93 +65,159 @@
             <div class=" card card-full rounded-m pb-4 custom-width">
                 <div class="drag-line"></div>
 
-                <div class="content d-flex ">
-                    <img class="m-2" src="" alt="" style="height: 100px; width: 100px;">
+                <div class="content d-flex flex-column justify-content-center align-items-center text-center">
+                    <img class="m-1" src="" alt="" style="height: 100px; width: 100px;">
 
-                    <div class="text ps-3 ">
-                        <div class="d-flex align-items-center text-center pt-3">
-                            <h1 class="font-600 mb-n1 color-highlight me-2 ">Tap Savvy</h1><a href="#"
-                                class="icon  rounded-xl border  icon-border bg-blue-dark color-blue-dark  "
-                                style="width: 25px; height: 25px;"><i class="fa fa-check"></i></a>
-                        </div>
+                    <div class="text ps-3 d-flex flex-column justify-content-center text-center">
 
-                        <p>Starter Scroll Up</p>
-                        <!-- <p>
-                                            This starter page can be scrolled up over the above image. <strong>Please Note</strong> - this
-                                            page must be full sized in content and cannot use cards, otherwise, the above element will be
-                                            visible
-                                            when scrolling over it.
-                                        </p> -->
+                        <h1 class=" mb-n1 color-highlight m-2" style="font-size: 2rem;">Tap Savvy</h1>
+
+
+                        <h3 class="mt-3">Naveen Upadhyay</h3>
+                        <p class=" m-0">Founder and Director</p>
                     </div>
 
                 </div>
-                <div class="content mt-0">This starter page can be scrolled up over the above image. <strong>Please
-                        Note</strong> - this
-                    page must be full sized in content and cannot use cards, otherwise, the above element will be
-                    visible
-                    when scrolling over it.</div>
+
+
+
+
+                <div class="card card-style">
+                    <div class="content">
+
+                        <h1 class="text-center ">About</h1>
+
+                        <p class="text-center">
+                            This is <strong>Naveen Upadhyay</strong> representing
+                            <strong>Tap Savvy
+                                Technologies,</strong>
+                            We deal into NFC products like standees with multiple QR to engage your visitors
+                            and NFC cards which helps you to Network In a more smart way with ease of a tap.
+                        </p>
+
+                        <div class="d-flex mb-4">
+                            <div class="align-self-center"><i
+                                    class="fa fa-code color-highlight fa-4x icon-70 text-center"></i></div>
+                            <div class="me-auto ps-4">
+                                <h4>Quality Code</h4>
+                                <p>
+                                    We create products we want to use for ourselves and that make us proud
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="d-flex mb-4">
+                            <div class="align-self-center"><i
+                                    class="fa fa-life-ring color-orange-dark fa-4x icon-70 text-center"></i>
+                            </div>
+                            <div class="me-auto ps-4">
+                                <h4>Hands on Support</h4>
+                                <p>
+                                    We treat our customers like we like to be treated. We're always here for
+                                    you!
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="d-flex">
+                            <div class="align-self-center"><i
+                                    class="fa fa-trophy color-yellow-dark fa-4x icon-70 text-center"></i>
+                            </div>
+                            <div class="me-auto ps-4">
+                                <h4>Elite Care</h4>
+                                <p>
+                                    We became elite because we cared about our customers and products
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="list-group list-custom-small list-menu m-3">
+                    <h3 class="text-center ">Connect on WhatsApp</h3>
+                    <input id="userNumber" class="form-control form-control-sm mt-2" type="text"
+                        style="padding:9px;border-radius:8px;" placeholder="Enter Number with Country Code">
+
+                    <button><a href="#" id="whatsappShare"
+                            class=" btn btn-s bg-success rounded-s btn-full bt-lg mt-3 md-3">
+                            <span class="color-white m-0">Share </span>
+
+                        </a>
+                    </button>
+                </div>
+
+
+
+
 
 
                 <!-- tabs -->
                 <div class="card card-style bg-theme pb-0 m-0">
                     <div class="content" id="tab-group-2">
                         <div class="tab-controls tabs-small tabs-rounded" data-highlight="bg-blue-dark">
-                            <a href="#" data-active data-bs-toggle="collapse" data-bs-target="#tab-5">Brochures</a>
+                            <a href="#" data-active data-bs-toggle="collapse" data-bs-target="#tab-5">Products</a>
                             <a href="#" data-bs-toggle="collapse" data-bs-target="#tab-6">Gallery</a>
-                            <a href="#" data-bs-toggle="collapse" data-bs-target="#tab-7">Message</a>
+                            <a href="#" data-bs-toggle="collapse" data-bs-target="#tab-7">Contact</a>
                         </div>
                         <div class="clearfix mb-3"></div>
                         <!-- 1 -->
                         <div data-bs-parent="#tab-group-2" class="collapse show" id="tab-5">
                             <div class="card card-style m-0">
-                                <div class="content">
 
 
 
-                                    <div class="row row-cols-3 px-1 mb-0">
+                                <div class="container mt-5">
+                                    <div class="row row-cols-2  g-4">
+                                        <!-- Card 1 -->
+                                        <div class="col">
+                                            <div class="card">
+                                                <img src="./images/cards/CARICATUTRE.jpg" class="card-img-top"
+                                                    alt="Caricature Image">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Caricature Card</h5>
+                                                </div>
+                                                <div class="m-0 p-0 text-center d-flex justify-content-between col">
+                                                    <button class="btn btn-primary w-50">View</button>
+                                                    <button class="btn btn-secondary">Enquiry</button>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                                        <a class="col p-2"
-                                            href="https://drive.google.com/file/d/18Hc3vz5TpY2rVzB60fvRxr1P2obtT2tT/view?usp=sharing"
-                                            data-gallery="gallery-a">
-                                            <img src="./images/cards/CARICATUTRE.jpg" alt="img"
-                                                class="img-fluid rounded-s shadow-xl">
-                                        </a>
+                                        <!-- Card 2 -->
+                                        <div class="col">
+                                            <div class="card">
+                                                <img src="./images/cards/CARICATUTRE.jpg" class="card-img-top"
+                                                    alt="Caricature Image">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Caricature Card</h5>
+                                                </div>
+                                                <div class="m-0 p-0 text-center d-flex justify-content-between col">
+                                                    <button class="btn btn-primary w-50">View</button>
+                                                    <button class="btn btn-secondary ">Enquiry</button>
+                                                </div>
+                                            </div>
+                                        </div>
 
-
-
-
-
-                                        <a class="col p-2"
-                                            href="https://drive.google.com/file/d/1la10-9u5Vrn86I06vovqpUoksIo-iACS/view?usp=sharing"
-                                            data-gallery="gallery-a">
-                                            <img src="./images/cards/GOOGLE_REVIEW.png" alt="img"
-                                                class="img-fluid rounded-s shadow-xl">
-                                        </a>
-                                        <a class="col p-2"
-                                            href="https://drive.google.com/file/d/1tAKJJ431UuqWjlCA2-6Y7N2GNSFjI2wp/view?usp=sharing"
-                                            data-gallery="gallery-a">
-                                            <img src="./images/cards/Linkedin.jpg" alt="img"
-                                                class="img-fluid rounded-s shadow-xl">
-                                        </a>
-                                        <a class="col p-2"
-                                            href="https://drive.google.com/file/d/1A06ZZdK61TqEehffbQw8Y2Xp_ErbmNCi/view?usp=sharing"
-                                            data-gallery="gallery-a">
-                                            <img src="./images/cards/profile.jpg" alt="img"
-                                                class="img-fluid rounded-s shadow-xl">
-                                        </a>
-                                        <a class="col p-2"
-                                            href="https://drive.google.com/file/d/1AQY0xSIP74g3GSVrV4-61XXvsk6Dryqx/view?usp=sharing"
-                                            data-gallery="gallery-a">
-                                            <img src="./images/cards/WhatsApp.jpeg" alt="img"
-                                                class="img-fluid rounded-s shadow-xl">
-                                        </a>
-
+                                        <!-- Card 3 -->
+                                        <div class="col">
+                                            <div class="card">
+                                                <img src="./images/cards/CARICATUTRE.jpg" class="card-img-top"
+                                                    alt="Caricature Image">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Caricature Card</h5>
+                                                </div>
+                                                <div class="m-0 p-0 text-center d-flex justify-content-between col">
+                                                    <button class="btn btn-primary w-50">View</button>
+                                                    <button class="btn btn-secondary ">Enquiry</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- card 4 -->
                                     </div>
                                 </div>
+
+
                             </div>
-
-
-
                         </div>
                         <!-- 2 -->
                         <div data-bs-parent="#tab-group-2" class="collapse" id="tab-6">
@@ -238,7 +283,7 @@
                                     class="input-style input-style-always-active has-borders no-icon validate-field mb-4">
                                     <input type="text" class="form-control validate-name" name="columnC" id="columnC"
                                         placeholder="Your Name" maxlength="25" required />
-
+                                    <label for="columnC" class="color-dark-grey">Name</label>
                                     <i class="fa fa-times disabled invalid color-dark"></i>
                                     <i class="fa fa-check disabled valid color-green-dark"></i>
                                     <em>(required)</em>
@@ -252,13 +297,7 @@
                                     <em>&nbsp;</em>
                                 </div>
 
-                                <div id="Business-Profession-div"
-                                    class="input-style has-borders input-style-always-active mb-4">
-                                    <input type="text" class="form-control" name="columnE" id="columnE"
-                                        placeholder="Location" />
 
-                                    <em>&nbsp;</em>
-                                </div>
 
                                 <div
                                     class="input-style input-style-always-active has-borders no-icon validate-field mb-4">
@@ -280,24 +319,7 @@
                                     <em>&nbsp;</em>
                                 </div>
 
-                                <!-- Business type -->
-                                <div class="input-style input-style-always-active has-borders no-icon mb-4">
 
-                                    <label for="columnH" class="color-dark">Business Type</label>
-                                    <select id="columnH" name="columnH">
-                                        <option value="default" disabled selected>Select here</option>
-                                        <option value="Architect">Architect</option>
-                                        <option value="Interior-Designer">Interior Designer</option>
-                                        <option value="Builder">Builder</option>
-                                        <option value="Contactor">Contactor</option>
-                                        <option value="Carpenter">Carpenter</option>
-                                        <option value="Retailer">Retailer</option>
-                                        <option value="Others">Others</option>
-                                    </select>
-                                    <span><i class="fa fa-chevron-down"></i></span>
-                                    <em></em>
-
-                                </div>
 
 
 
