--- a/menu-contact.html
+++ b/menu-contact.html
@@ -13,23 +13,12 @@
 
 
 
-<h6 class="menu-divider mt-4">Contacts</h6>
-<div class="list-group list-custom-small list-menu">
-    <a href="#">
-        <img src="images/pictures/1s.jpg">
-        <span>John Droid</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#">
-        <img src="images/pictures/5s.jpg">
-        <span>Gina Seed</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#">
-        <img src="images/pictures/6s.jpg">
-        <span>Jane Louder</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
+<h6 class="menu-divider my-4">Contacts</h6>
+<div class="ps-2">
+    <p class=" m-2 ">Naveen</p>
+    <p class="m-2">Email</p>
+    <p class="m-2">Phone Number</p>
+
 </div>
 <h6 class="menu-divider font-10 mt-4">Made with <i class="fa fa-heart color-red-dark pl-1 pr-1"></i> by Tap Savvy <span
         class="copyright-year">2025</span></h6>
