--- a/menu-email.html
+++ b/menu-email.html
@@ -13,28 +13,7 @@
 
 
 
-<h6 class="menu-divider mt-4">Social</h6>
-<div class="list-group list-custom-small list-menu">
-    <a href="#">
-        <img src="images/pictures/1s.jpg">
-        <span>Facebook</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#">
-        <img src="images/pictures/5s.jpg">
-        <span>Instagram</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#">
-        <img src="images/pictures/6s.jpg">
-        <span>Linkden</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
-    <a href="#">
-        <img src="images/pictures/6s.jpg">
-        <span>pinterest</span>
-        <i class="fa fa-angle-right"></i>
-    </a>
+<h5 class="menu-divider m-4">QR Code</h5>
+<div class=" my-5 p-2 text-center">
+    <img src="./images/QR/QR.png" alt="">
 </div>
-<h6 class="menu-divider font-10 mt-4">Made with <i class="fa fa-heart color-red-dark pl-1 pr-1"></i> by Tap Savvy <span
-        class="copyright-year">2025</span></h6>
